test/langtools/tools/javac/valhalla/lworld-values/RefDefault/GenericsWithQuestion.out
GenericsWithQuestion.java:18:14: compiler.err.type.found.req: GenericsWithQuestion.V.val, (compiler.misc.type.req.ref)
GenericsWithQuestion.java:18:21: compiler.err.type.found.req: GenericsWithQuestion.V.val, (compiler.misc.type.req.ref)
GenericsWithQuestion.java:19:21: compiler.err.type.found.req: GenericsWithQuestion.V.val, (compiler.misc.type.req.ref)
GenericsWithQuestion.java:20:14: compiler.err.type.found.req: GenericsWithQuestion.V.val, (compiler.misc.type.req.ref)
4 errors
